# robotics-cursor-rules

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/commands/: absorb.md  memory-update.md  system-update.md
.github/workflows/: ci.yml
agent-knowledge/: STATUS.md
agent-knowledge/Dashboards/: session-rollup.md
agent-knowledge/History/: events.ndjson  history.md
agent_docs/memory/: MEMORY.md  architecture.md  cli.md  integrations.md  packaging.md  testing.md
assets/claude/: global.md  project-template.md
assets/commands/: absorb.md  doctor.md  global-knowledge-sync.md  graphify-sync.md  knowledge-sync.md  ship.md
assets/rules/: generate-architecture-doc.mdc  history-backfill.mdc  memory-bootstrap.mdc  memory-writeback.mdc  shared-memory.mdc  workflow-orchestration.mdc
assets/rules-global/: action-first.mdc  no-icons-emojis.mdc  no-unsolicited-docs.mdc
assets/scripts/: bootstrap-memory-tree.sh  compact-memory.sh  doctor.sh  global-knowledge-sync.sh  graphify-sync.sh  import-agent-history.sh  install-project-links.sh  ship.sh  update-knowledge.sh  validate-knowledge.sh
assets/skills/: SKILLS.md
claude/: project-template.md
rules/: history-backfill.mdc  memory-bootstrap.mdc  memory-writeback.mdc  shared-memory.mdc  workflow-orchestration.mdc
scripts/: bootstrap-memory-tree.sh  compact-memory.sh  doctor.sh  import-agent-history.sh  install-project-links.sh  measure-token-savings.py  ship.sh  update-knowledge.sh
scripts/lib/: knowledge-common.sh
skills/decision-recording/: SKILL.md
skills/history-backfill/: SKILL.md
skills/memory-compaction/: SKILL.md
tests/: test_cli.py  test_packaging.py
(+66 files in other folders)
